dat_mtcars_e data 2

--- a/vignettes/erikmisc-e_plot_model_contrasts.Rmd
+++ b/vignettes/erikmisc-e_plot_model_contrasts.Rmd
@@ -39,41 +39,8 @@ This has been tested for `lm()` (fixed-effects model) and `lme4::lmer` (mixed fi
 The data variables are labelled and those will be used for plots.
 
 ```{r}
-# Data for testing
-dat_cont <-
-  datasets::mtcars %>%
-  tibble::as_tibble(
-    rownames = "model"
-  ) %>%
-  dplyr::mutate(
-    cyl = cyl %>% factor(levels = c(4, 6, 8), labels = c("four", "six", "eight"))
-  , vs  = vs  %>% factor(levels = c(0, 1), labels = c("V-shaped", "straight"))
-  , am  = am  %>% factor(levels = c(0, 1), labels = c("automatic", "manual"))
-  )
-
-# Label columns
-dat_labels <-
-  tibble::tribble(
-    ~var    , ~label
-  , "model" , "Model"
-  , "mpg"   , "Miles/(US) gallon"
-  , "cyl"   , "Number of cylinders"
-  , "disp"  , "Displacement (cu.in.)"
-  , "hp"    , "Gross horsepower"
-  , "drat"  , "Rear axle ratio"
-  , "wt"    , "Weight (1000 lbs)"
-  , "qsec"  , "1/4 mile time"
-  , "vs"    , "Engine"                     # (0 = V-shaped, 1 = straight)"
-  , "am"    , "Transmission"               # (0 = automatic, 1 = manual)"
-  , "gear"  , "Number of forward gears"
-  , "carb"  , "Number of carburetors"
-  )
-
-for (i_row in 1:nrow(dat_labels)) {
-  labelled::var_label(dat_cont[[dat_labels[["var"]][i_row] ]]) <- dat_labels[["label"]][i_row]
-}
-
-str(dat_cont)
+data(erikmisc::dat_mtcars_e)
+str(dat_mtcars_e)
 ```
 
 ## Fit model
@@ -91,7 +58,7 @@ form_model <-
 fit <-
   lm(
     formula = form_model
-  , data    = dat_cont
+  , data    = dat_mtcars_e
   )
 
 anova(fit)
@@ -113,7 +80,7 @@ we can examine the separate lists in the output.
 fit_contrasts <-
   e_plot_model_contrasts(
     fit                = fit
-  , dat_cont           = dat_cont
+  , dat_cont           = dat_mtcars_e
   , sw_print           = FALSE
   )
 ```
@@ -177,7 +144,7 @@ Below I use some options to specify one two-way interaction, stack them above-be
 fit_contrasts <-
   e_plot_model_contrasts(
     fit                = fit
-  , dat_cont           = dat_cont
+  , dat_cont           = dat_mtcars_e
   , choose_contrasts   = "cyl:vs"
   , sw_print           = FALSE
   , sw_table_in_plot   = FALSE
