--- a/vignettes/erikmisc-e_lm_bestsubset.Rmd
+++ b/vignettes/erikmisc-e_lm_bestsubset.Rmd
@@ -10,7 +10,7 @@ vignette: >
   %\VignetteIndexEntry{Best subset selection}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
-always_allow_html: yes
+#always_allow_html: yes
 ---
 
 ```{r, include = FALSE}
@@ -53,8 +53,10 @@ tab_best <-
   # options(width=100) # setting command window output text width wider
 tab_best %>% print(n = Inf, width = Inf)
   # options(op); # reset (all) initial options
+```
 
+```{r}
 # print into RStudio viewer or a pretty table in Rmd output
 # include "always_allow_html: yes" in Rmd yaml header
-tab_best %>% e_table_print()
+tab_best %>% e_table_print(sw_kable_format  = c("simple", "kbl", "html", "latex", "doc")[1])
 ```
