e_plot_model_contrasts add argument for emmip_rg.limit

--- a/vignettes/erikmisc-e_plot_model_contrasts.Rmd
+++ b/vignettes/erikmisc-e_plot_model_contrasts.Rmd
@@ -9,7 +9,7 @@ output:
 vignette: >
   %\VignetteIndexEntry{Plot model contrasts}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+  \usepackage[utf8]{inputenc}
 ---
 
 ```{r, include = FALSE}
@@ -60,7 +60,11 @@ fit <-
   , data    = dat_mtcars_e
   )
 
-anova(fit)
+car::Anova(
+    fit
+  , type = 3
+  , singular.ok = TRUE
+  )
 ```
 
 ```{r}
