vignettes, updating utf8 encoding statement

--- a/vignettes/erikmisc-e_lm_bestsubset.Rmd
+++ b/vignettes/erikmisc-e_lm_bestsubset.Rmd
@@ -9,7 +9,7 @@ output:
 vignette: >
   %\VignetteIndexEntry{Best subset selection}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+  \usepackage[utf8]{inputenc}
 #always_allow_html: yes
 ---
 
