--- a/vignettes/erikmisc-key_variables_completion.Rmd
+++ b/vignettes/erikmisc-key_variables_completion.Rmd
@@ -9,7 +9,7 @@ output:
 vignette: >
   %\VignetteIndexEntry{Key variables completion}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+  \usepackage[utf8]{inputenc}
 ---
 
 ```{r, include = FALSE}
