--- a/vignettes/erikmisc-e_multiple_regression_example.Rmd
+++ b/vignettes/erikmisc-e_multiple_regression_example.Rmd
@@ -9,7 +9,7 @@ output:
 vignette: >
   %\VignetteIndexEntry{Multiple regression using erikmisc}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+  \usepackage[utf8]{inputenc}
 ---
 
 ```{r, include = FALSE}
