--- a/vignettes/erikmisc-e_model_all_subsets_formula.Rmd
+++ b/vignettes/erikmisc-e_model_all_subsets_formula.Rmd
@@ -24,6 +24,7 @@ in order to choose the "best" model via a model selection criterion.
 
 ```{r setup}
 library(erikmisc)
+library(tidyverse)
 ```
 
 # Using `e_model_all_subsets_formula`
@@ -90,7 +91,7 @@ form_list <-
 
 # fit models and calculate model selection criteria
 lm_fit_list <- list()
-lm_fit_list_crit <- list()
+lm_fit_list_criteria <- list()
 
 for (i_form in seq_len(length(form_list))) {
   # model fit
@@ -101,26 +102,18 @@ for (i_form in seq_len(length(form_list))) {
     )
 
   # model selection criteria
-  lm_fit_list_crit[[ i_form ]] <-
+  lm_fit_list_criteria[[ i_form ]] <-
     e_lm_model_criteria(
-      lm_fit  = lm_fit_list[[ i_form ]]
-    , dat_fit = dat_mtcars_e
+      lm_fit    = lm_fit_list[[ i_form ]]
+    , dat_fit   = dat_mtcars_e
+    , model_id  = i_form
     )
 }
 
 # sort the models by a criterion
-lm_fit_crit <-
-  lm_fit_list_crit %>%
+lm_fit_criteria <-
+  lm_fit_list_criteria %>%
   dplyr::bind_rows() %>%
-  dplyr::mutate(
-    # number the model criteria with same indices as lm_fit_list above
-    model_id = 1:dplyr::n()
-  ) %>%
-  dplyr::select(
-    # move model_id to first column
-    model_id
-  , tidyselect::everything()
-  ) %>%
   dplyr::arrange(
     # arrange models by this model criterion
     bic               # ascending by bic (best on top)
@@ -128,16 +121,16 @@ lm_fit_crit <-
   )
 
 # print the head and tail of fit criteria table
-lm_fit_crit %>% head()
-lm_fit_crit %>% tail(3)
+lm_fit_criteria %>% head()
+lm_fit_criteria %>% tail(3)
 
 # best model ID
-lm_fit_crit$model_id[1]
+lm_fit_criteria$model_id[1]
 
 # summarize "best" model
-lm_fit_list[[ lm_fit_crit$model_id[1] ]] %>%
+lm_fit_list[[ lm_fit_criteria$model_id[1] ]] %>%
   car::Anova(type = 3)
-lm_fit_list[[ lm_fit_crit$model_id[1] ]] %>%
+lm_fit_list[[ lm_fit_criteria$model_id[1] ]] %>%
   summary()
 ```
 
@@ -193,7 +186,7 @@ form_list <-
 
 # fit models and calculate model selection criteria
 lmer_fit_list <- list()
-lmer_fit_list_crit <- list()
+lmer_fit_list_criteria <- list()
 
 for (i_form in seq_len(length(form_list))) {
   # model fit
@@ -205,26 +198,18 @@ for (i_form in seq_len(length(form_list))) {
     )
 
   # model selection criteria
-  lmer_fit_list_crit[[ i_form ]] <-
+  lmer_fit_list_criteria[[ i_form ]] <-
     e_lm_model_criteria(
-      lm_fit  = lmer_fit_list[[ i_form ]]
-    , dat_fit = dat_ergoStool_e
+      lm_fit    = lmer_fit_list[[ i_form ]]
+    , dat_fit   = dat_ergoStool_e
+    , model_id  = i_form
     )
 }
 
 # sort the models by a criterion
-lmer_fit_crit <-
-  lmer_fit_list_crit %>%
+lmer_fit_criteria <-
+  lmer_fit_list_criteria %>%
   dplyr::bind_rows() %>%
-  dplyr::mutate(
-    # number the model criteria with same indices as lm_fit_list above
-    model_id = 1:dplyr::n()
-  ) %>%
-  dplyr::select(
-    # move model_id to first column
-    model_id
-  , tidyselect::everything()
-  ) %>%
   dplyr::arrange(
     # arrange models by this model criterion
     caic              # ascending by caic (best on top)
@@ -232,16 +217,118 @@ lmer_fit_crit <-
   )
 
 # print the head and tail of fit criteria table
-lmer_fit_crit %>% head()
-lmer_fit_crit %>% tail(3)
+lmer_fit_criteria %>% head()
+lmer_fit_criteria %>% tail(3)
 
 # best model ID
-lmer_fit_crit$model_id[1]
+lmer_fit_criteria$model_id[1]
 
 # summarize "best" model
-lmer_fit_list[[ lmer_fit_crit$model_id[1] ]] %>%
+lmer_fit_list[[ lmer_fit_criteria$model_id[1] ]] %>%
   car::Anova(type = 3)
-lmer_fit_list[[ lmer_fit_crit$model_id[1] ]] %>%
+lmer_fit_list[[ lmer_fit_criteria$model_id[1] ]] %>%
   summary()
+```
+
+
+# Longitudinal linear (in parallel, for 200+ models)
+
+```{r, eval=FALSE}
+## Set up parallel backend
+  library(doParallel)
+  # use n-1 cores
+  n_cores <- parallel::detectCores() - 1
+  # create the cluster
+  my_cluster <-
+    parallel::makeCluster(
+      spec = n_cores
+    , type = "PSOCK"
+    )
+  # check cluster definition (optional)
+  print(my_cluster)
+  # register it to be used by %dopar%
+  doParallel::registerDoParallel(cl = my_cluster)
+  # check if it is registered (optional)
+  foreach::getDoParRegistered()
+  # how many workers are available? (optional)
+  foreach::getDoParWorkers()
+
+
+# table of the candidate models
+form_table <-
+  e_model_all_subsets_formula(
+      var_formula = NULL
+    , x_var_names = list(c("Type", "(1 | Subject)"), c("x1", "x2", "x3"))
+    , y_var_name  = "Effort"
+    , max_scope   = list("always", "SO")
+    , sw_return   = c("formula", "table")[2]
+    )
+print(form_table)
+
+# generate candidate model formulas
+form_list <-
+  e_model_all_subsets_formula(
+      var_formula = NULL
+    , x_var_names = list(c("Type", "(1 | Subject)"), c("x1", "x2", "x3"))
+    , y_var_name  = "Effort"
+    , max_scope   = list("always", "SO")
+    , sw_return   = c("formula", "table")[1]
+    )
+
+# fit models and calculate model selection criteria
+lmer_fit_list <-
+  foreach::foreach(
+    i_form = seq_len(length(form_list))
+  , .combine = "c"
+  ) %dopar% {
+    # model fit
+    lme4::lmer(
+      formula = form_list[[ i_form ]]
+    , REML    = TRUE
+    , data    = dat_ergoStool_e
+    )
+  }
+
+lmer_fit_list_criteria <-
+  foreach::foreach(
+    i_form = seq_len(length(form_list))
+  #, .combine = "c"
+  ) %dopar% {
+    # model selection criteria
+    e_lm_model_criteria(
+      lm_fit    = lmer_fit_list[[ i_form ]]
+    , dat_fit   = dat_ergoStool_e
+    , model_id  = i_form
+    )
+  }
+
+
+
+# sort the models by a criterion
+lmer_fit_criteria <-
+  lmer_fit_list_criteria %>%
+  dplyr::bind_rows() %>%
+  dplyr::arrange(
+    # arrange models by this model criterion
+    caic              # ascending by caic (best on top)
+    # dplyr::desc(r2)   # descending by r2 (best on top)
+  )
+
+# print the head and tail of fit criteria table
+lmer_fit_criteria %>% head()
+lmer_fit_criteria %>% tail(3)
+
+# best model ID
+lmer_fit_criteria$model_id[1]
+
+# summarize "best" model
+lmer_fit_list[[ lmer_fit_criteria$model_id[1] ]] %>%
+  car::Anova(type = 3)
+lmer_fit_list[[ lmer_fit_criteria$model_id[1] ]] %>%
+  summary()
+
+
+## stop cluster
+parallel::stopCluster(cl = my_cluster)
 ```
 
