--- a/README.Rmd
+++ b/README.Rmd
@@ -21,10 +21,10 @@ knitr::opts_chunk$set(
 
 Erik Erhardt's miscellaneous functions for solving complex data analysis workflows
 
-
 * <strong><a href="https://erikerhardt.github.io/erikmisc/">Documentation and Vignettes</a></strong>
 * <a href="https://github.com/erikerhardt/erikmisc/issues">Report Bug or Request Feature</a>
 
+July 2022: Note that current R-CMD-check "failing" is due to secondary dependencies on orphaned package 'gtools'.
 
 ## Installation
 
