--- a/data-raw/qmd_template/erik_qmd_template_simple.qmd
+++ b/data-raw/qmd_template/erik_qmd_template_simple.qmd
@@ -6,8 +6,8 @@ date:         last-modified # today, now, last-modified
 date-format:  long          # full, long, medium, short, iso,   https://quarto.org/docs/reference/dates.html
 format:
   html:
-    theme:                  cosmo
-    highlight-style:        tango
+    theme:                  litera
+    highlight-style:        atom-one
     toc:                    true
     toc-depth:              4
     toc-location:           right     # left, body, right
@@ -33,7 +33,7 @@ execute: # https://quarto.org/docs/computations/execution-options.html, https://
 <!---
 # Erik's compile commands in R:
   rm(list=ls())
-  fn_qmd <- "erik_qmd_template_simple.qmd""
+  fn_qmd <- "erik_qmd_template_simple.qmd"
   setwd("D:/Dropbox/StatAcumen/consult/Rpackages/erikmisc/data-raw/qmd_template")
   quarto::quarto_render(input = fn_qmd)
 -->
